--- a/css/styles.css
+++ b/css/styles.css
@@ -169,3 +169,48 @@ img {
         font-size: .688rem;
     }
 }
+
+/* HOME */
+.home {
+    background-color: var(--bg-color);
+    overflow: hidden;
+}
+
+.home__container {
+    padding: 4rem 0 1rem;
+    row-gap: 8.5rem;
+}
+
+.home__title {
+    font-size: var(--biggest-font-size);
+    font-weight: 400;
+}
+
+.home__description {
+    color: var(--title-color);
+    margin: 1rem 0 2rem;
+}
+
+.home__title,
+.home__description {
+    line-height: 140%;
+}
+
+.home__images {
+    position: relative;
+    width: 310px;
+    justify-self: center;
+}
+
+.home__images img:nth-child(1) {
+    width: 224px;
+    position: absolute;
+    right: -1.5rem;
+    top: -9.5rem;
+}
+
+.home__images img:nth-child(2) {
+    width: 180px;
+    margin-left: .5rem;
+    position: relative;
+}
