Added css to button

--- a/css/styles.css
+++ b/css/styles.css
@@ -214,3 +214,21 @@ img {
     margin-left: .5rem;
     position: relative;
 }
+
+/* BUTTON */
+.button__link {
+    color: var(--title-color);
+    font-weight: var(--font-medium);
+    display: inline-flex;
+    align-items: center;
+    column-gap: .5rem;
+}
+
+.button__link i {
+    font-size: 1rem;
+    transition: .3s;
+}
+
+.button__link:hover i {
+    transform: translateX(.25rem);
+}
