Added change background header function and css

--- a/css/styles.css
+++ b/css/styles.css
@@ -170,6 +170,12 @@ img {
     }
 }
 
+/* CHANGE BACKGROUND HEADER */
+.scroll-header {
+    background-color: var(--body-color);
+    box-shadow: 0 1px 4px hsla(220, 4%, 15%, .1);
+}
+
 /* HOME */
 .home {
     background-color: var(--bg-color);
