Added css to brands section

--- a/css/styles.css
+++ b/css/styles.css
@@ -372,3 +372,18 @@ img {
 .swiper-button-next {
     right: calc(50% - 2rem);
 }
+
+/* BRANDS */
+.brand__container {
+    grid-template-columns: repeat(2, max-content);
+    justify-content: center;
+    column-gap: 1.25rem;
+}
+
+.brand__img {
+    width: 120px;
+}
+
+.brand__img:nth-child(even) {
+    margin-top: 2rem;
+}
