--- a/css/styles.css
+++ b/css/styles.css
@@ -176,6 +176,11 @@ img {
     box-shadow: 0 1px 4px hsla(220, 4%, 15%, .1);
 }
 
+/* ACTIVE LINK */
+.active-link {
+    color: var(--title-color);
+}
+
 /* HOME */
 .home {
     background-color: var(--bg-color);
