--- a/css/styles.css
+++ b/css/styles.css
@@ -472,3 +472,19 @@ img {
     font-size: var(--smaller-font-size);
     color: var(--text-color-light);
 }
+
+/* SCROLL BAR */
+::-webkit-scrollbar {
+    width: .6rem;
+    border-radius: .5rem;
+    background-color: hsl(220, 8%, 76%);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: hsl(220, 8%, 64%);
+    border-radius: .5rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: hsl(220, 8%, 54%);
+}
