--- a/css/styles.css
+++ b/css/styles.css
@@ -488,3 +488,22 @@ img {
 ::-webkit-scrollbar-thumb:hover {
     background-color: hsl(220, 8%, 54%);
 }
+
+/* SCROLL UP */
+.scrollup {
+    position: fixed;
+    right: 1rem;
+    bottom: -30%;
+    background-color: var(--container-color);
+    box-shadow: 0 8px 12px hsla(220, 18%, 45%, .15);
+    display: inline-flex;
+    padding: .35rem;
+    color: var(--title-color);
+    font-size: 1.1rem;
+    z-index: var(--z-tooltip);
+    transition: .3s;
+}
+
+.scrollup:hover {
+    transform: translateY(-.25rem);
+}
