--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,8 @@ body {
     font-size: var(--normal-font-size);
     background-color: var(--body-color);
     color: var(--text-color);
+    transition: .4s;
+    /* For animation dark mode */
 }
 
 h1,
@@ -81,6 +83,50 @@ a {
 img {
     max-width: 100%;
     height: auto;
+}
+
+/* THEME */
+/* VARIABLES DARK THEME */
+body.dark-theme {
+    --bg-color: hsl(220, 18%, 13%);
+    --bg-color-light: hsl(220, 18%, 23%);
+    --title-color: hsl(220, 8%, 95%);
+    --text-color: hsl(220, 8%, 65%);
+    --body-color: hsl(220, 18%, 18%);
+    --container-color: hsl(220, 18%, 21%);
+}
+
+/* BUTTON DARK/LIGHT */
+.change-theme {
+    color: var(--title-color);
+    font-size: 1.125rem;
+    cursor: pointer;
+}
+
+/* COLOR CHANGES IN SOME PARTS OF THE WEBSITE, IN DARK THEM */
+.dark-theme .scroll-header {
+    box-shadow: 0 2px 8px hsla(220, 18%, 8%, .3);
+}
+
+.dark-theme .nav__menu {
+    background-color: var(--container-color);
+}
+
+.dark-theme .nav__menu,
+.dark-theme .scrollup {
+    box-shadow: 0 4px 8px hsla(220, 18%, 8%, .3);
+}
+
+.dark-theme::-webkit-scrollbar {
+    background-color: hsl(220, 18%, 15%);
+}
+
+.dark-theme::-webkit-scrollbar-thumb {
+    background-color: hsl(220, 18%, 25%);
+}
+
+.dark-theme::-webkit-scrollbar-thumb:hover {
+    background-color: hsl(220, 18%, 35%);
 }
 
 /* REUSABLE CSS CLASSES */
@@ -145,6 +191,8 @@ img {
         margin: 0 auto;
         padding: 1.25rem 2.8rem;
         border-radius: .5rem;
+        transition: .4s;
+        /* For animation dark mode */
     }
 
     .nav__list {
@@ -185,6 +233,8 @@ img {
 .home {
     background-color: var(--bg-color);
     overflow: hidden;
+    transition: .4s;
+    /* For animation dark mode */
 }
 
 .home__container {
@@ -290,6 +340,8 @@ img {
 .collection {
     background-color: var(--bg-color-light);
     overflow: hidden;
+    transition: .4s;
+    /* For animation dark mode */
 }
 
 .collection__container {
