--- a/css/styles.css
+++ b/css/styles.css
@@ -829,3 +829,17 @@ body.dark-theme {
         bottom: 3rem;
     }
 }
+
+/* FOR 2K RESOLUTIONS (2048 X 1152, 2048 X 1536) */
+@media screen and (min-width: 2048px) {
+    body {
+        zoom: 1.3;
+    }
+}
+
+/* FOR 4K RESOLUTIONS (3840 X 2160, 4096 X 2160) */
+@media screen and (min-width: 3840px) {
+    body {
+        zoom: 2.3;
+    }
+}
